commit after media query lesson

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
             <h2>
                 "Strive not to be a success, but rather to be a man of value." - Albert Einstein
             </h2>
+            <div id="sidebar">
+                <h3>About Me</h3>
+                <ul>
+                    <li>Fact 1</li>
+                    <li>Fact 2</li>
+                    <li>Fact 3</li>
+                    <li>Fact 4</li>
+                    <li>Fact 5</li>
+                </ul>
+            </div>
             <div class="paragraph">
                 <h3>Academics</h3>
                 <p>
